--- a/environments/prod-env/values.yaml
+++ b/environments/prod-env/values.yaml
@@ -35,3 +35,29 @@ gateway:
       memory: 200Mi
     limits:
       memory: 400Mi
+
+model:
+  image:
+    tag: v1
+  env:
+    SPRING_PROFILES_ACTIVE: "docker,prod"
+  envFromSecretRefs:
+    - config-client-credentials
+  resources:
+    requests:
+      memory: 200Mi
+    limits:
+      memory: 400Mi
+
+model-management:
+  image:
+    tag: v1
+  env:
+    SPRING_PROFILES_ACTIVE: "docker,prod"
+  envFromSecretRefs:
+    - config-client-credentials
+  resources:
+    requests:
+      memory: 200Mi
+    limits:
+      memory: 400Mi
