ADD)missing depedency in dev-env

--- a/environments/dev-env/Chart.yaml
+++ b/environments/dev-env/Chart.yaml
@@ -18,3 +18,11 @@ dependencies:
     version: 1.0.0
     repository: file://../../components/gateway
 
+  - name: model
+    version: 1.0.0
+    repository: file://../../components/model
+
+  - name: model-management
+    version: 1.0.0
+    repository: file://../../components/model
+
