--- a/environments/dev-env/Chart.yaml
+++ b/environments/dev-env/Chart.yaml
@@ -24,5 +24,5 @@ dependencies:
 
   - name: model-management
     version: 1.0.0
-    repository: file://../../components/model
+    repository: file://../../components/model-management
 
