--- a/components/model/values.yaml
+++ b/components/model/values.yaml
@@ -4,10 +4,15 @@ image:
   name: model
   pullPolicy: Never
 
-
 env:
   SPRING_PROFILES_ACTIVE: "docker"
+  SPRING_CONFIG_LOCATION: file:/config-repo/application.yml,file:/config-repo/model-service.yml
 
 livenessProbe_enabled: true
 
 readinessProbe_enabled: true
+
+configmap:
+  enabled: true
+  volumeMounts:
+    mountPath: /config-repo
