--- a/components/zipkin/Chart.yaml
+++ b/components/zipkin/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 appVersion: "1.0"
-description: A Helm chart for the Config Server
-name: config-server
+description: A Helm chart for Zipkin
+name: zipkin
 version: 1.0.0
 
 dependencies:
